# tcurl

./: .gitignore  pyproject.toml  tcurl_spec.md
.github/workflows/: python-publish.yml  version-bump.yml
tappet/: app.py  models.py  store.py
tappet/storage/: requests.py
tcurl/: app.py  cli.py  http_client.py  models.py  storage.py  store.py
tcurl/utils/: __init__.py  editor.py
