[tool.poetry]
name = "tcurl"
version = "0.1.0"
description = "TUI HTTP Client with request management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.47.0"
click = "^8.1.7"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
tcurl = "tcurl.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
